--- a/assets/style.css
+++ b/assets/style.css
@@ -15,10 +15,10 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color: #EDEADA;
   color: black;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 6px solid black;
 }
 
 .description {
@@ -43,17 +43,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #FFDBA8;
   
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #EBA3B6;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #528DB3;
   color: white;
 }
 
@@ -61,7 +61,7 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: #9E987D;
   color: white;
 }
 
